# Distributed-File-System-over-LAN

./: README.md
DFS-over-LAN/: 1MB.txt  CMakeLists.txt
DFS-over-LAN/chunk/: CMakeLists.txt  chunckServer.cpp  chunkServer.cpp  chunkServer.h  main.cpp
DFS-over-LAN/client/: CMakeLists.txt  client.cpp  client.h  main.cpp
DFS-over-LAN/client-gui/: CMakeLists.txt  client.cpp  client.h  main.cpp  main.qml
DFS-over-LAN/common/: CMakeLists.txt  encodingUtils.cpp  encodingUtils.h  noiseEcc.h
DFS-over-LAN/master/: CMakeLists.txt  main.cpp  masterserver.cpp  masterserver.h
